# aws-lambda-env-vars-from-secrets-manager

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  deploy.sh
scripts/: retrieve-secrets  wrapper-env-from-secrets-manager
src/: main.rs
