[package]
name = "env-vars-from-secrets-manager"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.38.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"